feat: add delete function